--- a/site/index.html
+++ b/site/index.html
@@ -19,7 +19,7 @@
         <h2 class="catchEm">
             <img src="https://www.freepnglogos.com/uploads/gotta-catch-em-all-transparent-pokemon-logo-11.png" width=300 alt="gotta catch em all, transparent pokemon logo" />
         </h2>
-        <div class="pokeBox"></div>
+        <div class="pokeBox">This is our pokebox</div>
     </main>
 </body>
 
