--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="icon" type="image/ico" href="favicon.ico"> -->
     <link rel="stylesheet" href="app.css" />
-    <script defer src="index.js"></script>
+    <script defer src="index.ts"></script>
 </head>
 
 <body>
@@ -20,6 +20,7 @@
             <img src="https://www.freepnglogos.com/uploads/gotta-catch-em-all-transparent-pokemon-logo-11.png" width=300 alt="gotta catch em all, transparent pokemon logo" />
         </h2>
         <div class="pokeBox">This is our pokebox</div>
+        <div id="app"></div>
     </main>
 </body>
 
