render 50 monsters to page

--- a/site/index.html
+++ b/site/index.html
@@ -19,8 +19,12 @@
         <h2 class="catchEm">
             <img src="https://www.freepnglogos.com/uploads/gotta-catch-em-all-transparent-pokemon-logo-11.png" width=300 alt="gotta catch em all, transparent pokemon logo" />
         </h2>
-        <div class="pokeBox">This is our pokebox</div>
-        <div id="app"></div>
+        <div class="pokeBox">
+            <ul>
+
+            </ul>
+        </div>
+
     </main>
 </body>
 
