--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="icon" type="image/ico" href="favicon.ico"> -->
     <link rel="stylesheet" href="app.css" />
-    <script defer src="index.ts"></script>
+    <script defer src="index.ts" type="module"></script>
 </head>
 
 <body>
